# clickhouse-haskell

./: .envrc  .gitignore  Jenkinsfile  README.md  clickhouse-haskell.cabal  flake.nix  stack.yaml
src/Database/: ClickHouseDriver.hs
src/Database/ClickHouseDriver/: Block.hs  Defines.hs  HTTP.hs
src/Database/ClickHouseDriver/HTTP/: Client.hs  Connection.hs  Helpers.hs  Types.hs
