cabal-version:  1.12
name:           clickhouse-haskell
version:        0.1.2.4
synopsis:       A Haskell library as database client for Clickhouse
homepage:       https://github.com/2049foundation/clickhouse-haskell/
bug-reports:    https://github.com/2049foundation/clickhouse-haskell/issues
author:         Piyush Kumar
maintainer:     piyush.kumar@juspay.in
copyright:      2020 Juspay Technologies Private Limited
license:        AllRightsReserved
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md
description:
  Clickhouse-Haskell is a library for making connection with the server of
  column-oriented DBMS, Clickhouse. This library supports SELECT, INSERT and other query commands.

  For more detail, see: https://github.com/2049foundation/clickhouse-haskell#readme

library
  exposed-modules:
      Database.ClickHouseDriver
      Database.ClickHouseDriver.HTTP
      Database.ClickHouseDriver.HTTP.Helpers
      Database.ClickHouseDriver.HTTP.Client
      Database.ClickHouseDriver.HTTP.Types
      Database.ClickHouseDriver.HTTP.Connection
      Database.ClickHouseDriver.Defines
  other-modules:
      Paths_clickhouse_haskell
  hs-source-dirs:
      src
  build-depends:
    base                              >=4.12 && <5,
    containers,
    array,
    time,
    transformers,
    aeson,
    attoparsec,
    bytestring,
    binary,
    hashable,
    text,
    unordered-containers,
    vector,
    async,
    bytestring-to-vector,
    call-stack,
    data-default-class,
    data-dword,
    exceptions,
    mtl,
    filepath,
    hashmap,
    http-client,
    http-client-tls,
    network,
    parsec,
    streaming-commons,
    io-streams,
    monad-loops,
    monad-parallel,
    network-ip,
    split,
    network-simple,
    resource-pool,
    tz,
    unix-time,
    uri-encode,
    uuid,
    word8,
    utf8-string
  default-language: Haskell2010
